# omniterm

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: bump-version.yml  release.yml
docs/: MACOS_SIGNING.md  RELEASE-STEPS.md  RUST-VERSION.md  STEP1-SCAFFOLDING.md  STEP2-UI-SKELETON.md  STEP3-SSH-CONNECTION.md  STEP4-PTY-XTERM.md  STEP5-SFTP.md  WINDOWS-CODE-SIGNING.md
scripts/: build-release-local.sh  bump-and-release.sh  re-release.sh
src/: App.tsx
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: mod.rs  sftp.rs  sftp_upload.rs  ssh_agent.rs  ssh_connection.rs  system.rs  terminal.rs
src-tauri/src/ssh/: auth.rs  bastion.rs  direct.rs  error.rs  mod.rs  session_manager.rs
src-tauri/src/terminal/: mod.rs  shell_channel.rs
src/components/layout/: MainArea.tsx  ResizeHandle.tsx  Sidebar.tsx  TitleBar.tsx
src/components/terminal/: TerminalView.tsx
src/domains/key-manager/: types.ts
src/domains/key-manager/components/: KeyManagerPanel.tsx
src/domains/session/: types.ts
src/domains/session/components/: SessionForm.tsx  SessionList.tsx
src/domains/session/hooks/: useEstablishConnection.ts
src/domains/sftp/: types.ts
src/domains/sftp/components/: SftpExplorer.tsx
src/stores/: keyManagerStore.ts  sessionStore.ts  terminalStore.ts
src/types/: key-manager.ts  session.ts
