[package]
name = "app"
version = "0.1.5"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
# openssl-sys vendored: 크로스 컴파일 시 시스템 OpenSSL 불필요 (전체 트리에서 사용)
openssl-sys = { version = "0.9", features = ["vendored"] }
# vendored-openssl: ssh2/libssh2-sys가 위 openssl-sys(vendored) 사용
ssh2 = { version = "0.9", features = ["vendored-openssl"] }
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.22"
libc = "0.2"
